--- a/index2.html
+++ b/index2.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>💗</title>
   <link rel="stylesheet" href="style2.css" />
+  <!-- (opsional) tidak perlu CSS tambahan; kanvas hati di-style inline -->
 </head>
 <body>
   <audio id="bgm2" src="lagu.mp3" loop></audio>
@@ -31,18 +32,39 @@
       </div>
     </div>
 
+    <!-- LOVE LETTER -->
     <div id="loveLetter" class="hidden">
       <div class="letter-box">
         <p><strong>💌 Untuk Miya</strong></p>
         <p>Aku cuma mau bilang…</p>
         <p>Kamu itu luar biasa. Gak apa-apa kalau lelah, asal jangan nyerah.</p>
         <p>Ada orang yang suka dengerin kamu, yaitu aku💖</p>
+
+        <!-- ⬇️ Tambahan: tombol konfirmasi untuk lanjut ke gambar hati -->
+        <div class="love-actions" style="margin-top:16px; display:flex; gap:10px; justify-content:center;">
+          <button id="confirmHeartBtn"
+                  style="background:#fff0f5; color:#d6336c; border:none; border-radius:24px; padding:10px 18px; cursor:pointer; font-weight:600; box-shadow:0 4px 10px rgba(255,105,180,0.25);">
+            Lanjut ke gambar hati 💗
+          </button>
+        </div>
+        <!-- ⬆️ END Tambahan -->
       </div>
     </div>
   </div>
+
+  <!-- Confetti canvas kamu tetap ada -->
   <canvas id="confettiCanvas"></canvas>
 
+  <!-- ⬇️ Tambahan: canvas untuk gambar hati (disembunyikan dulu).
+       Ditaruh full-screen, tapi tidak mengganggu layout sebelum dipakai. -->
+  <canvas id="turtleCanvas"
+          style="display:none; position:fixed; inset:0; width:100vw; height:100vh; z-index:12; background:rgba(255,240,245,0.35);">
+  </canvas>
 
+  <!-- Script asli kamu -->
   <script src="script2.js"></script>
+
+  <!-- ⬇️ Tambahan: nanti aku kasih isi file ini di langkah berikut -->
+  <script src="script2_heartaddon.js"></script>
 </body>
 </html>
